--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,29 @@
-# Core scientific and ML stack
+# --- Core scientific & ML stack (macOS arm64, Python 3.12) ---
 numpy==1.26.4
-scipy==1.11.4
-scikit-learn==1.3.2
-torch==2.2.2
-sentence-transformers==2.2.2
-spacy==3.7.2
+scipy==1.14.1
+scikit-learn==1.5.2
+torch==2.9.0
+
+# Embeddings / HF ecosystem (compatible trio)
+sentence-transformers==3.0.1
+transformers==4.44.2
+huggingface_hub==0.23.2
+
+# NLP helpers
+spacy==3.7.4
 nltk==3.9.1
 textstat==0.7.4
 
-# Web backend
+# --- Web backend ---
 fastapi==0.115.5
 uvicorn==0.32.0
 pydantic==2.9.2
 orjson==3.10.7
 python-dotenv==1.0.1
 
-# Logging
+# --- Logging ---
 loguru==0.7.2
 
-# Development tools
+# --- Dev tools ---
 setuptools>=68.0.0
 wheel>=0.41.0
